@@ -1,3 +1,7 @@
+2008-05-31  Piotr Fusik  <fox@scene.pl>
+* atari.c, pokey.c: made the BASIC version compilable
+
+
 2008-05-29  Perry McFarlane  <perry_m@fastmail.fm>
 * atari_sdl.c, cassette.c, input.c, memory.c, pbi_bb.c, pbi_proto80.c,
 pbi_xld.c, pokeysnd.c, sio.c, statesav.c, ui.h, util.[ch], votrax.c:
